--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -28,8 +28,17 @@ jobs:
         run: |
           pytest tests/ --cov=./ --cov-report=xml
 
-      - name: Upload Coverage Report (optional)
-        uses: actions/upload-artifact@v4
+      - name: Run Hadolint (Dockerfile Linter)
+        uses: hadolint/hadolint-action@v3.1.0
         with:
-          name: coverage-report
-          path: coverage.xml
+          dockerfile: Dockerfile
+      
+      - name: Build Docker Image
+        run: |
+          docker build -t openai-api-app:test .
+  
+      - name: Run Security Scan with Trivy
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'openai-api-app:test'
+          format: 'table'
